--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.geo_interestpoi"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.karumi:dexter:6.0.1'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.2.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
