--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".Home"
-            android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Home"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity
             android:name=".POI_Set"
             android:theme="@style/AppTheme.NoActionBar"></activity>
