--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Profile"></activity>
-        <activity android:name=".History" />
-        <activity android:name=".Search" />
+        <activity android:name=".Profile"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".History"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Search"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Home"
             android:theme="@style/AppTheme.NoActionBar" />
